# element-manager

./: .gitignore  CMakeLists.txt  README.md
deb/: cpp-template.deb  element-manager.deb
deb/cpp-template/DEBIAN/: control
deb/element-manager/DEBIAN/: control
inc/: CMakeLists.txt  element_manager.h  shape.h
main/: CMakeLists.txt
src/: CMakeLists.txt  element_manager.cpp  main.cpp  shape.cpp
tests/: CMakeLists.txt  element_manager_tests.cpp  misc_tests.cpp  shape_tests.cpp  test.cpp
